# delta-shadow-runner

./: .gitignore  Codex-progress.txt  README.md  feature-list.json  init.ps1  package-lock.json  package.json  plan.md  playwright.config.ts  pyproject.toml  start-controlled-e2e.cmd  start-demo.cmd  start-game-route.cmd  start-route-calibration.cmd  start-warehouse-cleanup.cmd  start-windows-preflight.cmd  tsconfig.json  tsconfig.server.json  vision.ps1  vite.config.ts  vitest.config.ts
configs/: controlled-window.json  game-route.example.json  menu-1920.spec.example.json  warehouse-empty-1920.spec.example.json
python_tests/: test_actuator.py  test_calibrate_templates.py  test_capture.py  test_capture_benchmark.py  test_config.py  test_controlled_target.py  test_evaluate_templates.py  test_events.py  test_external_loop.py  test_external_session.py  test_feature_matching.py  test_feature_navigation.py  test_game_session.py  test_generate_menu_profile.py  test_menu_automation.py  test_menu_profile.py  test_menu_runtime.py  test_menu_worker.py  test_navigation.py  test_passive_scene.py  test_perception.py  test_planner.py  test_preflight.py  test_replay.py  test_route_capture.py  test_route_capture_failures.py  test_route_pipeline_e2e.py  test_runtime_events.py  test_safe_input.py  test_sample_frames.py  test_session_sample.py  test_template_matching.py  test_template_profile.py  test_warehouse_cleanup.py  test_warehouse_observer.py  test_warehouse_worker.py  test_win32_native.py  test_windows_vision_launcher.py  test_worker.py
tests/: init-script.test.ts  (+1 more)
(+67 files in other folders)
